--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/ucsm"
+        android:src="@drawable/ucsmquitesmall"
         android:paddingLeft="20dp"
 
       />
